--- a/Inventario/src/vista/frmPrincipal.form
+++ b/Inventario/src/vista/frmPrincipal.form
@@ -91,7 +91,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="btnCrud">
       <Properties>
-        <Property name="text" type="java.lang.String" value="CURD"/>
+        <Property name="text" type="java.lang.String" value="AGREGAR MARCAS Y MODELOS"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCrudActionPerformed"/>
